# spdm-emu

./: CMakeLists.txt
spdm_emu/libspdm_patches/: 0001-add-pointer-to-spdm-connection-struct-in-spdm-contex.patch  README.md
spdm_emu/spdm_cma_lib/: .spdm_cma_requester.h.swp  .spdm_requester_spdm.c.swp  spdm_cma_req.c  spdm_cma_req.h  spdm_cma_req_internal.h  spdm_cma_requester.c  spdm_cma_requester.h  spdm_cma_requester_mctp.c  spdm_cma_requester_tcp.c  spdm_requester_spdm.c
spdm_emu/spdm_cma_lib/spdm_cma_emu/: command.h  spdm_cma_req_emu.c
spdm_emu/spdm_dbus_requester_emu/: CMakeLists.txt
spdm_emu/spdm_dbus_requester_emu/include/: certificate.hpp  component_integrity.hpp  dbus_get_certificate.h  support.hpp  test_c_header.h  trusted_component.hpp
spdm_emu/spdm_dbus_requester_emu/src/: certificate.cpp  component_integrity.cpp  dbus_get_certificate.c  main.cpp  support.cpp  test_c_header.c  trusted_component.cpp
spdm_emu/spdm_requester_emu/: CMakeLists.txt
spdm_emu/spdm_responder_emu/: CMakeLists.txt
